editボタンとdestoryボタンを表示する

--- a/app/assets/templates/boards/show.jst.jade
+++ b/app/assets/templates/boards/show.jst.jade
@@ -1,1 +1,5 @@
+span.badge(data-js='destroy')
+  span.glyphicon.glyphicon-remove
+span.badge(data-js='edit')
+  span.glyphicon.glyphicon-edit
 = board.get('name')
