--- a/app/assets/stylesheets/boards.sass
+++ b/app/assets/stylesheets/boards.sass
@@ -1,3 +1,12 @@
 // Place all the styles related to the boards controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.ui-autocomplete
+  border: 1px solid #333
+  background-color: white
+  width: 200px
+
+  li.ui-menu-item
+    list-style: none
+    border-bottom: 1px solid #333
